--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,5 +20,7 @@
         <!--<url-pattern>*.form</url-pattern>-->
     <!--</servlet-mapping>-->
 
-
+    <!--<welcome-file-list>-->
+    <!--<welcome-file>WEB-INF/Nest/pages/singIn.html</welcome-file>-->
+    <!--</welcome-file-list>-->
 </web-app>
