--- a/pom.xml
+++ b/pom.xml
@@ -97,5 +97,11 @@
             <version>1.3.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.18.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
