删除对.idea文件夹的追踪

--- a/src/main/resources/config/jdbcConfiguration.properties
+++ b/src/main/resources/config/jdbcConfiguration.properties
@@ -1,5 +1,5 @@
-#数据库配置文件
+#JDBC閰嶇疆鏂囦欢
 url=jdbc:mysql://127.0.0.1:3306/nest?useSSL=false&characterEncoding=utf-8
 driver=com.mysql.jdbc.Driver
-username=root
+username=Nest-Dev
 password=123456
